syntax = "proto3";

package conversion; 

option go_package = "conversion.com/currency-conversion;currency_conversion";

service ConversionService {
    rpc ConvertCurrency (ConversionRequest) returns (ConversionResponse);
}

message ConversionRequest {
    string baseCurrency = 1;
    string sourceCurrency = 2;
    double transferAmount = 3;
}

message ConversionResponse {
    double convertedAmount = 1;
}